Fix search box right edge on mobile in dark mode
Fixes #146.

--- a/fraporu/tìlam/tìlam.css
+++ b/fraporu/tìlam/tìlam.css
@@ -943,6 +943,12 @@ h2[id]::before {
 		background-color: #333 !important;
 	}
 
+	@media (max-width: 600px) {
+		#search-form #search-box {
+			border-right-color: #555 !important;
+		}
+	}
+
 	.ui.search > .results .result .description {
 		color: #999;
 	}
